# WorldCup-2026-RAG

./: .gitignore  config.py  db.py  export_db.py  fetch_wc.py  frontend.py  main.py  pyproject.toml  schemas.py
.github/workflows/: ci.yml  daily_etl.yml
src/rag_chromadb/: __init__.py  config.py  db.py  export_db.py  fetch_wc.py  frontend.py  main.py  schemas.py
tests/: test_db.py  test_fetch_wc.py  test_schemas.py
