[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chromadb"
version = "0.1.0"
description = "Local RAG pipeline — ChromaDB + LM Studio + football-data.org"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.44.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
fetch-wc = "rag_chromadb.fetch_wc:main"
rag-demo = "rag_chromadb.main:main"
export-db = "rag_chromadb.export_db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]